--- a/MVC/CIPlatform/CIPlatform/Views/Home/Registration.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/Registration.cshtml
@@ -91,7 +91,7 @@
 
                     @using (Html.BeginForm("Registration","Home", FormMethod.Post)){
 
-                        @*if (ViewBag.Status != null)
+                        if (ViewBag.Status != null)
                         {
                             if (ViewBag.Status == 1)
                             {
@@ -107,7 +107,7 @@
                                 <span class="alert alert-danger">Error while registering</span>
                                 <br />
                             }
-                        }*@
+                        }
 
                     <div class="login-form">
 
