--- a/MVC/CIPlatform/CIPlatform/Views/Home/StoryDetails.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/StoryDetails.cshtml
@@ -9,6 +9,7 @@
 @model LandingAllModels
 
 
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -90,7 +91,7 @@
                         <a class="nav-link" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: grey; ">
 
                         <button class="btn1 dropdown-toggle" style="width:100%; border: none; color: grey" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        @TempData["fullname"]
+                        @ViewBag.fullname
                         </button>
                   
                         </a>
@@ -210,6 +211,10 @@
                         </div>
                         <br>
                         <h1 style="color:grey">@item.Title</h1>
+                        <br>
+
+                       
+                        
                         <br />
                           <p class="para" style="font-size:large;">@item.Description</p>
                           <br /> 
