--- a/MVC/CIPlatform/CIPlatform/Views/Shared/_Grid.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Shared/_Grid.cshtml
@@ -3,6 +3,31 @@
 *@
 @{
 }
+
+                        @using (Html.BeginForm("_Grid", "Home", FormMethod.Get))
+                        {
+                            @if (ViewBag.SearchStatus == 0)
+                            {
+                                @*<div class="alert alert-danger">No Mission Found</div>*@
+
+                                <div class="container">
+
+                                    <div class="combine">
+                                        <h3 class="no-mission">No Mission Found</h3>
+                                        <button class="submit-btn-body">
+                                            Submit new mission
+
+                                            <img src="~/NewFolder/right-arrow.png" alt="">
+
+                                        </button>
+
+                                    </div>
+
+
+                                </div>
+                            }
+
+                        }
  
             <div class="row">
                  @foreach(var item in ViewBag.outputsf)
@@ -223,4 +248,9 @@
             </div>
         
                    
-        <br />      
+        <br />  
+        
+
+
+       
+       
