--- a/MVC/CIPlatform/CIPlatform/Views/Home/ShareYourStory.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/ShareYourStory.cshtml
@@ -285,7 +285,7 @@
                     <div class="row all-btns">
 
                         <div class="col-4">
-                            <button class="btn-cancle">Cancel</button>
+                            <button class="btn-cancle" onclick="onCancel()">Cancel</button>
                         </div>
 
                         <div class="col-4">
